# polars-matmul

./: Cargo.toml  Cargo.toml.blas  README.md  benchmark.py  benchmark_baseline.txt  pyproject.toml
.github/workflows/: CI.yml
examples/: benchmark_matmul.py  benchmark_topk.py
python/polars_matmul/: __init__.py
src/: lib.rs  matmul.rs  metrics.rs
tests/: test_performance.py  test_polars_matmul.py
